# ChangeLog for net-im/telepathy-connection-managers
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-connection-managers/ChangeLog,v 1.25 2014/12/27 15:49:45 eva Exp $

  27 Dec 2014; Gilles Dartiguelongue <eva@gentoo.org>
  telepathy-connection-managers-2-r2.ebuild, metadata.xml:
  Rename jabber USE flag to xmpp, bug #216300.

  14 Nov 2014; Pacho Ramos <pacho@gentoo.org>
  -telepathy-connection-managers-2.ebuild:
  Drop old (#508854)

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org>
  telepathy-connection-managers-2-r2.ebuild,
  telepathy-connection-managers-2.ebuild:
  Remove trailing '.' from DESCRIPTION.

  27 Apr 2014; Pacho Ramos <pacho@gentoo.org>
  -telepathy-connection-managers-2-r1.ebuild:
  drop old

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org>
  telepathy-connection-managers-2-r2.ebuild:
  x86 stable, bug 499954

  09 Mar 2014; Pacho Ramos <pacho@gentoo.org>
  telepathy-connection-managers-2-r2.ebuild:
  amd64 stable, bug 499954

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org>
  telepathy-connection-managers-2-r2.ebuild:
  Fix wrong commit, bug 502160

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org>
  telepathy-connection-managers-2-r1.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org>
  telepathy-connection-managers-2-r1.ebuild:
  amd64 stable, bug #478252

*telepathy-connection-managers-2-r2 (28 Nov 2013)

  28 Nov 2013; Pacho Ramos <pacho@gentoo.org>
  +telepathy-connection-managers-2-r2.ebuild, metadata.xml:
  Add support for Sip Exchange Protocol (#492346 by Maksim 'max_posedon'
  Melnikau)

  27 Oct 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Voip herd is removed: http://article.gmane.org/gmane.linux.gentoo.devel/88434

*telepathy-connection-managers-2-r1 (20 Oct 2013)

  20 Oct 2013; Pacho Ramos <pacho@gentoo.org>
  +telepathy-connection-managers-2-r1.ebuild,
  -telepathy-connection-managers-1.ebuild: