@@ -1,13 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD telepathy-connection-managers-2-r2.ebuild 1020 SHA256 e5e1ddec19eb7d9278318b1d240a729cf98198c9c284758558accc2529ca58fb SHA512 6142c66a8c2cd4e63f302882dfd697f5830cdf6122ff74ee18aeee9a8c7c348d8e880010ee07c4facbbfbda11232ea0b686496e3c147f55920ea0e79f3efbd92 WHIRLPOOL 941ec3271130dcac55008635a6e0e964565623011d3839b18f9e65f708d1aa0383fd24d42320179464e7bef143bac3c4d40365e4e361f142b852d28a4308740a
-MISC ChangeLog 5464 SHA256 6a0be722cff9df3ab3176277dd69e9d923f30f47142cb0b3ff171554659d0173 SHA512 643b0e11c799049cfbc152e059e52d6b0697e3fe127237fd8a8d1f3adfcb958147ec4da0a8ad86d42569090f06f379eb1f99e07e80e301a345bd08cae4d500e2 WHIRLPOOL 22d2bd3ed5c23818a64d6e158b2491973bea5449d7a25d81c2c28e98aa93043af775a61b8998a4fbef8cf0cb7a8598684cc6b0a57134837185f24480f3eb4888
-MISC metadata.xml 605 SHA256 ba8c04895763f2b3742d415308598ef295e9f2e98d51291d4e956ac0abe94183 SHA512 4fd73af2c3cf07d07cb8a8656b958a7e7cd7aab8b8b687fafc6208cd10af1d0964b56f6663eb5fae440406e56059c80290349423df1aa9666508aa15427364db WHIRLPOOL 1847c9113c25bcfa56e54e6a00dba6b294b363980baa01f2fb16d50bafd8f5bebbac55e9ade08c06995bf062bcce9e4feec817a054bdc7db486f3849a4b4b008
+EBUILD telepathy-connection-managers-2-r2.ebuild 1249 SHA256 b6a9d8f14ff2d99210a88d18eb1a9b0f510ec78d8728d42ce9b8f48cf201f067 SHA512 0512eff6d8b9eff74497aac0280e9555b09ee6549a8a0cb22fe1a5b0cf913be0c8a8264cbf2ead1d36ec4096a5a7c4d187c95f2167b68b94fad776f26a37e0a6 WHIRLPOOL 3f4776172c674e5732908009e270f2aec8d22060fd20c6374dc9176a8682a3686b081072e4ac8eb68f5041ccf172c78ca99a63f2ce3056a067917c2752f4a8ff
+MISC ChangeLog 5729 SHA256 ce032141aab7c35d78bac0934f80754b2ea48a7803c8a7e6f5a18957694e7c24 SHA512 b63f2cff89bbbc65ca69d724bf369c951514a4e8b021650fa9a566245d46e85680662b074b5036886039d29ba3093184860de0c9ad36a1e5672990c31120e6bb WHIRLPOOL a140709ea6c1e3e8051fe2bc299f7606ac54aea9ffce064f8385db9cdc2467021984919f220aa4e0a323ba9c7a57fc4a28e65b6d998ea078c4413dd31208168e
+MISC metadata.xml 802 SHA256 f30045768ff28f93921ff4ecd037658c26d718595ade63408e95939cb3d39d88 SHA512 20729921b0897c9975b0f227a37e71d47a93edab09cacdaa44131f3f5cede72a014657c5fff4cae98fb4796e31749761784ec4b6213ce051850d073dbee84952 WHIRLPOOL 24abde35dce2e710589454c80376308008cf48294497803c470abc4314beeaaa0b3ae286377fed383bff82470349574cd9256f5a5331fde17a282e770aea1a2b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlSe1RoACgkQ1fmVwcYIWAbLWwCgpmTbzDL3NaBo3HR1tG9PU7zo
-E0IAn3jUGXt7qdRX/7Puhv8VSVYFPfUV
-=Nzuw
+iQJ8BAEBCABmBQJU8xJ6XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOAmgQAJb+qtNH6uEK7Bd6zLQeR3Wq
+PLfN3WIW6e78yxbKqOjUbIpKjg+RRGSPZoQ6UobW1nwGOPaMK+dWmfOiD73K20/5
+Q44+KsjYdW9sdR5L2nrHBdvqr7ASES/UlgSStp/0OkDTJKWhV1MQJ1s0pTQcdV0i
+/1+ZOvRLz6oDZTs2ekVMVR3v15josISMIxFPJCpihTs0UepNGr2gqVlrBxELXveK
+NqeNn4nKRL2wULw0pVrn3RJkDYjeTCPu41X6isD6DEWKjh65g6TkBNOOo5hqjziE
+YD0BIm67bAVVWnsF4uhQn/rDO8RkaHEWglb2L6+8QJ5T5ZOZc0C/5hGxbbLSFhqf
+w8Sz3SuTL/aysuExu0cjH6fBS1b2NJXTDDFkEoMUUfPwc5TH8rrOX4DXR3hXijJp
+ZCwurYGkzS6XTD9nZ5Ku5Qz41WlEV84Q6FYfHzAKgMWZTQTx2VMMby9zdHrK+6SD
+5v8AjeQELDN2qh7IPkXL+2g6O+b2OmyipAdP5x6RXF/3VqJ6BkATN69IeeuLwciP
+dwmJdIUmYQ5/QnHkOmk52S9SHtrDF80ba49u5o4/i5tUwNuGi1PfNTQ9kEmkC/c2
+9FL2abE306xajdNwNvKpDI90rMZfbjH17Z7m5NKTJP1cm8GF+4vZNOWg4+O9kL13
+KL/CTV0/trrH+z+EYMlx
+=9NIt
 -----END PGP SIGNATURE-----
