@@ -1,6 +1,11 @@
 # ChangeLog for net-im/telepathy-connection-managers
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-connection-managers/ChangeLog,v 1.25 2014/12/27 15:49:45 eva Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-im/telepathy-connection-managers/ChangeLog,v 1.26 2015/03/01 13:22:01 mgorny Exp $
+
+  01 Mar 2015; Michał Górny <mgorny@gentoo.org> metadata.xml,
+  telepathy-connection-managers-2-r2.ebuild:
+  Add flags for gadu, meanwhile & steam protocols using telepathy-haze,
+  https://github.com/gentoo/gentoo-portage-rsync-mirror/pull/61 by karolherbst.
 
   27 Dec 2014; Gilles Dartiguelongue <eva@gentoo.org>
   telepathy-connection-managers-2-r2.ebuild, metadata.xml:
